<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".BanquetBook1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txvTitle.BanquetBook1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:text="@string/Title_BookBanquet1"
            android:gravity="center"
            android:textSize="@dimen/Title_textSize" />

        <TextView
            android:id="@+id/txvIntro.BanquetBook1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Intro_BookBanquet1"
            android:gravity="fill_vertical"
            android:textSize="@dimen/Intro_textSize" />

        <EditText
            android:id="@+id/txtName.BanquetBook1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:hint="@string/Hint_Name"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/txtMobileNo.BanquetBook1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:hint="@string/Hint_MobileNo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtEmail.BanquetBook1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/Hint_Email"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDate.BanquetBook1"
            android:text="@string/Select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTime.BanquetBook1"
            android:text="@string/Select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/txtPurpose.BanquetBook1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:hint="@string/Hint_PurposeBanquet"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txvShowDate.BanquetBook1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txvShowTime.BanquetBook1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel.BanquetBook1"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSubmit.BanquetBook1"
                android:text="@string/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>