<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".FoodParcel1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txvTitle.FoodParcel1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:text="@string/Title_FoodParcel1"
            android:gravity="center"
            android:textSize="@dimen/Title_textSize"
            />

        <TextView
            android:id="@+id/txvIntro.FoodParcel1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Intro_FoodParcel1"
            android:gravity="fill_vertical"
            android:textSize="@dimen/Intro_textSize" />

        <EditText
            android:id="@+id/txtName.FoodParcel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:hint="@string/Hint_Name"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/txtMobileNo.FoodParcel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:hint="@string/Hint_MobileNo"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDate.FoodParcel1"
            android:text="@string/Select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTime.FoodParcel1"
            android:text="@string/Select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnFood.FoodParcel1"
            android:text="@string/Select_Food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/txvShowDate.FoodParcel1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txvShowTime.FoodParcel1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txvShowFood.FoodParcel1"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSubmit.FoodParcel1"
                android:text="@string/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel.FoodParcel1"
                android:text="@string/cancel"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>