<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".TableBooking1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txvTitle.TableBooking1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp"
        android:text="@string/Title_tableBooking1"
        android:gravity="center"
        android:textSize="@dimen/Title_textSize"
        />

        <TextView
            android:id="@+id/txvIntro.TableBooking1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Intro_tableBooking1"
            android:gravity="fill_vertical"
            android:textSize="@dimen/Intro_textSize" />

        <EditText
            android:id="@+id/txtName.TableBooking1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:maxLength="100"
            android:hint="@string/Hint_Name"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/txtMobileNo.TableBooking1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="@string/Hint_MobileNo"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDate.TableBooking1"
            android:text="@string/Select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTime.TableBooking1"
            android:text="@string/Select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/txtNoGuest.TableBooking1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="5dp"
            android:hint="@string/Hint_NoGuest"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txvShowDate.TableBooking1"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txvShowTime.TableBooking1"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <Button
                android:id="@+id/btnCancel.tableBooking1"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:text="@string/cancel"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/btnSubmit.tableBooking1"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:text="@string/submit"
                android:textSize="30sp"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>