<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeDelivery4">

    <TextView
        android:id="@+id/txvTitle.HomeDelivery4"
        android:text="@string/Title_HomeDelivery4"
        android:textSize="@dimen/Title_textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txvIntro.HomeDelivery4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvTitle.HomeDelivery4"
        android:text="@string/Intro_HomeDelivery4"
        android:textSize="@dimen/Intro_textSize"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnPay.HomeDelivery4"
        android:layout_below="@+id/txvIntro.HomeDelivery4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/pay"
        android:textSize="50sp"
        />

    <Button
        android:id="@+id/btnCancel.HomeDelivery4"
        android:layout_below="@+id/btnPay.HomeDelivery4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/cancel"
        android:textSize="50sp"
        />



</RelativeLayout>