<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodParcel2">

    <TextView
        android:id="@+id/txvTitle.FoodParcel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Title_tableBooking2"
        android:textSize="@dimen/Title_textSize" />

    <TextView
        android:id="@+id/txvIntro.FoodParcel2"
        android:layout_below="@+id/txvTitle.FoodParcel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Intro_tableBooking2"
        android:textSize="@dimen/Intro_textSize" />

    <EditText
        android:id="@+id/txtOTP.FoodParcel2"
        android:layout_below="@+id/txvIntro.FoodParcel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/OTP"
        android:textSize="45sp" />

    <ProgressBar
        android:id="@+id/pb.FoodParcel2"
        android:layout_below="@+id/txtOTP.FoodParcel2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:tag="Verifying" />

    <LinearLayout
        android:layout_below="@+id/pb.FoodParcel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCancel.FoodParcel2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnVerify.FoodParcel2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/verify"
            android:textSize="35sp" />
    </LinearLayout>

</RelativeLayout>