<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Login"
    >
<LinearLayout
    android:layout_gravity="fill_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txvTitle.LoginA"
        android:text="@string/welcome_to_hotel_services"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_gravity="top"
        />
    <ImageView
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:layout_width="250dp"
        android:layout_height="250dp" />

    <ProgressBar
        android:id="@+id/pb.Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    <EditText
        android:id="@+id/txtEmail.LoginA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_here"
        android:textSize="30sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <EditText
            android:id="@+id/txtPassword.LoginA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password_here"
            android:textSize="30sp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnLogin.LoginA"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/txvNewAccount.LoginA"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/New_account"
        android:gravity="center"
        android:textSize="16sp"/>
    </LinearLayout>
</ScrollView>